WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291638
REGRESSION(
292662@main
) Broke video playing on apple.com
https://bugs.webkit.org/show_bug.cgi?id=291638
Summary
REGRESSION(292662@main) Broke video playing on apple.com
alan
Reported
2025-04-16 11:01:55 PDT
<
rdar://148761596
>
Attachments
Patch
(8.18 KB, patch)
2025-04-16 11:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.23 KB, patch)
2025-04-16 20:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-04-16 11:04:58 PDT
Created
attachment 474929
[details]
Patch
alan
Comment 2
2025-04-16 20:49:11 PDT
Created
attachment 474936
[details]
[fast-cq]Patch
EWS
Comment 3
2025-04-17 06:41:55 PDT
Committed
293789@main
(752651417000): <
https://commits.webkit.org/293789@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 474936
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug