REGRESSION(292662@main) Broke video playing on apple.com https://bugs.webkit.org/show_bug.cgi?id=291638 <rdar://148761596>

Unreviewed revert.

* LayoutTests/fast/layout/relayout-boundary-inside-flex-expected.html: Removed.
* LayoutTests/fast/layout/relayout-boundary-inside-flex.html: Removed.
* LayoutTests/fast/layout/relayout-boundary-inside-inline-expected.html: Removed.
* LayoutTests/fast/layout/relayout-boundary-inside-inline.html: Removed.
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::isLayoutBoundary):
(WebCore::RenderObject::markContainingBlocksForLayout):
(WebCore::nearestBaselineContextAncestor): Deleted.

Canonical link: https://commits.webkit.org/293789@main